--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/spinner.css" />
-    <script src="./js/api/mock-api.js" defer></script>
     <script src="./js/script.js" defer></script>
     <title>Blank Template</title>
   </head>
   <body>
     <nav>Nav Bar</nav>
     <section>
-      <form id="login-form" onsubmit="login">
+      <form id="login-form">
         <label for="username">Username</label>
         <input type="text" name="username" id="username" />
         <label for="password">Password</label>
